--- a/app/src/main/res/values-es-rSV/strings.xml
+++ b/app/src/main/res/values-es-rSV/strings.xml
@@ -73,7 +73,7 @@
     <string name="nc_settings_theme_title">Tema</string>
     <string name="nc_settings_theme_light">Claro</string>
     <string name="nc_settings_theme_dark">Oscuro</string>
-    <string name="nc_settings_privacy">Privacidad</string>
+    <string name="nc_settings_privacy_legal">Privacidad</string>
     <string name="nc_none">Ninguno</string>
     <string name="nc_screen_lock_timeout_300">5 minutos</string>
     <string name="nc_cancel">Cancelar</string>
