--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -89,7 +89,7 @@
     <string name="nc_settings_theme_battery_saver">Establecido polo aforrador de batería</string>
     <string name="nc_settings_theme_light">Claro</string>
     <string name="nc_settings_theme_dark">Escuro</string>
-    <string name="nc_settings_privacy">Privacidade</string>
+    <string name="nc_settings_privacy_legal">Privacidade</string>
     <string name="nc_settings_screen_lock_title">Bloqueo de pantalla</string>
     <string name="nc_settings_screen_lock_desc">Bloquear %1$s co bloqueo de pantalla de Android ou co método biométrico compatíbel</string>
     <string name="nc_settings_screen_lock_timeout_title">Tempo de inactividade para o bloqueo da pantalla</string>
