--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -85,7 +85,7 @@
     <string name="nc_settings_theme_battery_saver">Energiagazdálkodás által beállítva</string>
     <string name="nc_settings_theme_light">Világos</string>
     <string name="nc_settings_theme_dark">Sötét</string>
-    <string name="nc_settings_privacy">Adatvédelem</string>
+    <string name="nc_settings_privacy_legal">Adatvédelem</string>
     <string name="nc_settings_screen_lock_title">Képernyőzár</string>
     <string name="nc_settings_screen_lock_desc">A(z) %1$s zárolása az androidos képernyőzárral, vagy támogatott biometrikus eljárással</string>
     <string name="nc_settings_screen_lock_timeout_title">Képernyő zárolása ennyi tétlenség után</string>
