--- a/app/src/main/res/values-is/strings.xml
+++ b/app/src/main/res/values-is/strings.xml
@@ -81,7 +81,7 @@
     <string name="nc_settings_theme_follow_system">Nota sjálfgefið á kerfi</string>
     <string name="nc_settings_theme_light">Ljóst</string>
     <string name="nc_settings_theme_dark">Dökkt</string>
-    <string name="nc_settings_privacy">Gagnaleynd</string>
+    <string name="nc_settings_privacy_legal">Gagnaleynd</string>
     <string name="nc_settings_screen_lock_title">Skjálæsing</string>
     <string name="nc_settings_screen_lock_timeout_title">Tímamörk skjálæsingar við aðgerðaleysi</string>
     <string name="nc_none">Ekkert</string>
