--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -88,7 +88,7 @@
     <string name="nc_settings_theme_battery_saver">バッテリーの使用を節約する</string>
     <string name="nc_settings_theme_light">ライト</string>
     <string name="nc_settings_theme_dark">ダーク</string>
-    <string name="nc_settings_privacy">プライバシー</string>
+    <string name="nc_settings_privacy_legal">プライバシー</string>
     <string name="nc_settings_screen_lock_title">スクリーンロック</string>
     <string name="nc_settings_screen_lock_desc">%1$sをアンドロイドスクリーンロックかサポートされている生体認証でロックします。</string>
     <string name="nc_settings_screen_lock_timeout_title">タイムアウト時のスクリーンロック</string>
