--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -74,7 +74,7 @@
     <string name="nc_settings_theme_follow_system">시스템 기본 설정 사용</string>
     <string name="nc_settings_theme_light">밝음</string>
     <string name="nc_settings_theme_dark">어두움</string>
-    <string name="nc_settings_privacy">프라이버시</string>
+    <string name="nc_settings_privacy_legal">프라이버시</string>
     <string name="nc_settings_screen_lock_title">화면 잠금</string>
     <string name="nc_none">없음</string>
     <string name="nc_locked">잠금 해제를 위해 탭하기</string>
