--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,4 +322,8 @@
 
     <string name="path_password_strike_through" translatable="false"
         tools:override="true">M3.27,4.27L19.74,20.74</string>
+    <string name="nc_settings_phone_book_integration_key" translatable="false">phone_book_integration</string>
+    <string name="nc_settings_phone_book_integration_desc">Match contacts based on phone number to integrate Talk shortcut in phone book</string>
+    <string name="nc_settings_phone_book_integration_title">Phone book integration</string>
+    <string name="no_phone_book_integration_due_to_permissions">No phone book integration due to missing permissions</string>
 </resources>
