--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,10 @@
     <string name="nc_settings_link_previews_title">Show link previews</string>
     <string name="nc_settings_link_previews_desc">Allows previews of content from received links for supported services</string>
     <string name="nc_settings_link_previews_key" translatable="false">link_previews</string>
+    <string name="nc_settings_read_privacy_key" translatable="false">read_privacy</string>
     <string name="nc_locked">Tap to unlock</string>
+    <string name="nc_settings_read_privacy_desc">Share my read-status and show the read-status of others</string>
+    <string name="nc_settings_read_privacy_title">Read status</string>
 
     <string name="nc_screen_lock_timeout_30">30 seconds</string>
     <string name="nc_screen_lock_timeout_60">1 minute</string>
