--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,7 +142,7 @@
     <string name="nc_new_password">New password</string>
     <string name="nc_wrong_password">Wrong password</string>
     <string name="nc_about">About</string>
-    <string name="nc_privacy">Privacy and Legal Policy</string>
+    <string name="nc_privacy">Privacy</string>
     <string name="nc_get_source_code">Get source code</string>
     <string name="nc_license_title">License</string>
     <string name="nc_license_summary">GNU General Public License, Version 3</string>
