re-layout conversation list item layout
- unread conversation display
- harmonize font-sizes
- re-enlarge avatar to 48dp
- make unread-bubble bold
- use grey tones for text/headline

Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,7 +337,7 @@
     <string name="nc_last_moderator">You need to promote a new moderator before you can leave %1$s.</string>
 
     <!-- Chat -->
-    <string name="nc_99_plus">99+</string>
+    <string name="nc_999_plus" translatable="false">999+</string>
     <string name="nc_copy_message">Copy</string>
     <string name="nc_reply">Reply</string>
 
