set application name in call screens from String nc_app_name
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,9 +188,9 @@
     <string name="nc_permissions_settings">Open settings</string>
 
     <!-- Call -->
-    <string name="nc_voice_call">Nextcloud Talk voice call</string>
-    <string name="nc_video_call">Nextcloud Talk video call</string>
-    <string name="nc_unknown_call">Nextcloud Talk call</string>
+    <string name="nc_call_voice">%s voice call</string>
+    <string name="nc_call_video">%s video call</string>
+    <string name="nc_call_unknown">%s call</string>
     <string name="nc_call_incoming">INCOMING</string>
     <string name="nc_call_ringing">RINGING</string>
     <string name="nc_connecting_call">Connecting…</string>
