make conversation item more accessible: adding image description, grow depending on text size
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,4 +355,6 @@
     <string name="nc_look_and_feel">Appearance &amp; Sounds</string>
     <string name="nc_settings_calls_sound">Calls sound</string>
     <string name="nc_settings_notifications_sound">Notifications sound</string>
+    <string name="protected_conversation">protected conversation</string>
+    <string name="favorite_conversation">favorite conversation</string>
 </resources>
