--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,7 +307,6 @@
     <string name="nc_file_browser_reshare_forbidden">You are not allowed to re-share this file</string>
 
     <!-- Lobby -->
-
     <string name="nc_webinar">Webinar</string>
     <string name="nc_lobby">Lobby</string>
     <string name="nc_start_time">Start time</string>
@@ -358,8 +357,12 @@
     <string name="nc_phone_book_integration_chat_via">Chat via %s</string>
     <string name="nc_phone_book_integration_account_not_found">Account not found</string>
 
+    <!-- App Bar -->
+    <string name="appbar_search_in">Search in %s</string>
+
     <!-- Non-translatable strings -->
     <string name="path_password_strike_through" translatable="false"
         tools:override="true">M3.27,4.27L19.74,20.74</string>
     <string name="tooManyUnreadMessages" translatable="false">999+</string>
+    <string name="nc_action_open_main_menu">Open main menu</string>
 </resources>
