--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -347,14 +347,15 @@
 
     <!-- Phonebook Integration -->
     <string name="nc_settings_phone_book_integration_key" translatable="false">phone_book_integration</string>
-    <string name="nc_settings_phone_book_integration_desc">Match contacts based on phone number to integrate Talk shortcut in phone book</string>
-    <string name="nc_settings_phone_book_integration_title">Phone book integration</string>
+    <string name="nc_settings_phone_book_integration_desc">Match contacts based on phone number to integrate Talk
+        shortcut into system contacts app</string>
+    <string name="nc_settings_phone_book_integration_title">Phone number integration</string>
     <string name="nc_settings_phone_book_integration_phone_number_dialog_title">Phone number</string>
     <string name="nc_settings_phone_book_integration_phone_number_dialog_description">You can set your phone number so
         other users will be able to find you</string>
     <string name="nc_settings_phone_book_integration_phone_number_dialog_invalid">Invalid phone number</string>
     <string name="nc_settings_phone_book_integration_phone_number_dialog_success">Phone number set successfully</string>
-    <string name="no_phone_book_integration_due_to_permissions">No phone book integration due to missing permissions</string>
+    <string name="no_phone_book_integration_due_to_permissions">No phone number integration due to missing permissions</string>
     <string name="nc_phone_book_integration_chat_via">Chat via %s</string>
     <string name="nc_phone_book_integration_account_not_found">Account not found</string>
    
