open files inside app
Open files directly inside the app.
Download file into cache beforehand if not already done.

supported file types:
jpg, .png, .gif, .mp3, .mp4, .mov, .wav, .txt, .md

thanks to @tobiasKaminsky and @starypatyk

Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,6 +341,10 @@
     <string name="nc_delete_message">Delete</string>
     <string name="nc_delete_message_leaked_to_matterbridge">Message deleted successfully, but it might have been leaked to other services</string>
 
+    <string name="share">Share</string>
+    <string name="send_to">Send to</string>
+    <string name="open_in_files_app">Open in Files app</string>
+
     <!-- Upload -->
     <string name="nc_upload_local_file">Upload local file</string>
     <string name="nc_upload_from_cloud">Share from %1$s</string>
@@ -393,7 +397,7 @@
     <string name="scope_published_title">Published</string>
     <string name="scope_published_description">Synchronize to trusted servers and the global and public address book</string>
     <string name="scope_toggle">Scope toggle</string>
-    
+
     <!-- App Bar -->
     <string name="appbar_search_in">Search in %s</string>
 
@@ -403,4 +407,5 @@
     <string name="nc_action_open_main_menu">Open main menu</string>
     <string name="failed_to_save">Failed to save %1$s</string>
     <string name="selected_list_item">selected</string>
+    <string name="filename_progress">%1$s (%2$d)</string>
 </resources>
