align single/dual-line list item layouts with avatar/icon according to material design
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -389,4 +389,5 @@
     <string name="tooManyUnreadMessages" translatable="false">999+</string>
     <string name="nc_action_open_main_menu">Open main menu</string>
     <string name="failed_to_save">Failed to save %1$s</string>
+    <string name="selected_list_item">selected</string>
 </resources>
