--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,8 @@
 
     <string name="nc_select_an_account">Select an account</string>
 
+    <string name="nc_profile_personal_info_title">Personal Info</string>
+
     <!-- Conversation menu -->
     <string name="nc_start_conversation">Start a conversation</string>
     <string name="nc_configure_room">Configure conversation</string>
