backport/enhance login screen
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,12 @@
     <string name="nc_settings">Settings</string>
 
     <!-- Server selection -->
-    <string name="nc_server_url">Server address</string>
+    <string name="nc_server_connect">Test server connection</string>
+    <string name="nc_server_helper_text">The link to your %1$s web interface when you open it in the browser.</string>
+    <string name="nc_server_testing_connection">Testing connection</string>
+    <string name="nc_server_unsupported">Server does not have supported Talk app installed</string>
+
+    <string name="nc_server_url">Server address https://…</string>
     <string name="nc_server_not_installed">Please finish your %1$s installation</string>
     <string name="nc_server_db_upgrade_needed">Please upgrade your %1$s database</string>
     <string name="nc_server_maintenance">Please bring your %1$s out of maintenance</string>
