--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,7 +287,8 @@
     <string name="nc_description_send_message_button">Send message</string>
 
     <!-- Empty states -->
-    <string name="nc_conversations_empty">Join a conversation or start a new one\n Say hi to your friends and colleagues!</string>
+    <string name="nc_conversations_empty">Join a conversation or start a new one</string>
+    <string name="nc_conversations_empty_details">Say hi to your friends and colleagues!</string>
     <string name="nc_hello">Hello</string>
 
     <!-- Other -->
