--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,6 +289,7 @@
     <string name="nc_limit_hit">%s characters limit has been hit</string>
     <string name="nc_groups">Groups</string>
     <string name="nc_participants">Participants</string>
+    <string name="nc_participants_add">Add participants</string>
 
     <string name="nc_owner">Owner</string>
     <string name="nc_moderator">Moderator</string>
