--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -409,4 +409,6 @@
     <string name="failed_to_save">Failed to save %1$s</string>
     <string name="selected_list_item">selected</string>
     <string name="filename_progress">%1$s (%2$d)</string>
+    <string name="nc_dialog_invalid_password">Invalid password</string>
+    <string name="nc_dialog_reauth_or_delete">Do you want to reauthorize or delete this account?</string>
 </resources>
