--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,6 +369,7 @@
     <string name="nc_phone_book_integration_account_not_found">Account not found</string>
 
     <string name="starred">Favorite</string>
+    <string name="encrypted">Encrypted</string>
     <string name="password_protected">Password protected</string>
 
     <string name="avatar">Avatar</string>
