--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,6 +283,7 @@
     <string name="nc_message_sent">Message sent</string>
     <string name="nc_remote_video_off">Remote video off</string>
     <string name="nc_remote_audio_off">Remote audio off</string>
+    <string name="nc_add_attachment">Add attachment</string>
 
     <!-- Contacts endless loading -->
     <string name="nc_no_more_load_retry">No more items to load. Refresh to retry.</string>
