Fix removing an attendee from a conversation
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -305,6 +305,8 @@
 
     <!-- Other -->
     <string name="nc_limit_hit">%s characters limit has been hit</string>
+    <string name="nc_email">Email</string>
+    <string name="nc_group">Group</string>
     <string name="nc_groups">Groups</string>
     <string name="nc_participants">Participants</string>
     <string name="nc_participants_add">Add participants</string>
