--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,8 @@
     <string name="nc_license_summary">GNU General Public License, Version 3</string>
 
     <string name="nc_select_an_account">Select an account</string>
+    <string name="nc_account_chooser_add_account">Add account</string>
+    <string name="nc_account_chooser_active_user">Active user</string>
 
     <string name="nc_profile_personal_info_title">Personal Info</string>
 
