--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -375,6 +375,9 @@
 
     <!-- location sharing -->
     <string name="nc_share_location">Share location</string>
+    <string name="nc_location_permission_required">location permission is required</string>
+    <string name="nc_share_current_location">Share current location</string>
+    <string name="nc_share_this_location">Share this location</string>
 
     <!-- Phonebook Integration -->
     <string name="nc_settings_phone_book_integration_key" translatable="false">phone_book_integration</string>
